# matryoshka

./: .dockerignore  .env.example  .env.native.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  collect.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  res.txt  seed_for_db.sql
backend/: Dockerfile  alembic.ini  generate_test_db.py  main.py  openapi.json  pyproject.toml  seed_categories.py  seed_projects.py  seed_users.py
backend/api/v1/: admin.py  category.py  comments.py  dependencies.py  invites.py  likes.py  media.py  projects.py  roles.py  routers.py  technology.py  university.py  user.py  users.py
backend/core/: config.py  dependencies.py  exceptions.py
backend/db/: session.py
backend/db/alembic/: env.py
backend/db/alembic/versions/: 0532520e5be6_add_cascade_delete_relathionship.py  0dd32ce3b034_add_tables.py  21e2c3c9678e_add_likes_ro_project.py  4d1df288a9a1_add_tables.py  (+24 more)
backend/models/: category.py  comments.py  invites.py  likes.py  media.py  project.py  technology.py  university.py  user.py
backend/repositories/: category.py  comments.py  invites.py  likes.py  media.py  members.py  projects.py  roles.py  technology.py  university.py
backend/schemas/: category.py  comments.py  invites.py  likes.py  media.py  project_technology.py  projects.py  technology.py  university.py  user.py
backend/services/: auth.py  category.py  comments.py  invites.py  likes.py  media.py  members.py  projects.py  roles.py  storage.py  technology.py  university.py  user.py
backend/utils/: get_datetime_utc_now.py  slugify.py
(+74 files in other folders)
