[project]
name = "matryoshka"
version = "0.1.0"
description = ""
authors = [
    {name = "wesorat"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
