[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "wesorat"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "fastapi-users[sqlalchemy] (>=15.0.5,<16.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "faker (>=40.23.0,<41.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)"
]
